# fuujin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/materials/: Chiito.mat
assets/models/: .gitignore  Cube.blend  Cube.gltf  Cube.model  Gunman.blend  Gunman.blend1  Gunman.fbx  Gunman.gltf  Gunman.model  Triangle.model
assets/models/animations/: Armature|Take 001|BaseLayer.anim
assets/models/materials/: ColorGrid.mat  WesternTex2.mat
assets/shaders/: ImGui.glsl  MaterialSkinned.glsl  MaterialStatic.glsl  PointLightSkinned.glsl  PointLightStatic.glsl  Test.glsl
assets/shaders/include/: InterStage.glsl  Material.glsl  MultiCameraGeometry.glsl  PointLightDepth.glsl  Renderer.glsl  Scene.glsl  SkinningVertex.glsl  StaticVertex.glsl
src/: CMakeLists.txt  fuujin.h  fuujinpch.h  main.cpp
src/fuujin/: Application.cpp  Application.h  Event.h  Events.h  Layer.h  View.cpp  View.h
src/fuujin/animation/: Animation.cpp  Animation.h  Animator.cpp  Animator.h
src/fuujin/asset/: Asset.h  AssetManager.cpp  AssetManager.h  ModelImporter.cpp  ModelImporter.h  ModelSource.cpp  ModelSource.h
src/fuujin/core/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Compression.cpp  Compression.h  Event.h  Events.h  Input.h  Layer.h  Platform.cpp  Platform.h  Ref.h  Utils.h  View.cpp  View.h
src/fuujin/imgui/: ImGuiHost.cpp  ImGuiHost.h  ImGuiLayer.cpp  ImGuiLayer.h
src/fuujin/platform/desktop/: DesktopPlatform.cpp  DesktopPlatform.h  DesktopWindow.cpp  DesktopWindow.h
src/fuujin/platform/vulkan/: Vulkan.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandQueue.cpp  VulkanCommandQueue.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h
src/fuujin/renderer/: CommandQueue.h  DeviceBuffer.h  DeviceImage.h  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsDevice.h  Light.cpp  Light.h  Material.cpp  Material.h  Model.cpp  Model.h  Pipeline.h  RenderLabel.cpp  RenderLabel.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  Shader.h  ShaderBuffer.cpp  ShaderBuffer.h  ShaderLibrary.cpp  ShaderLibrary.h  Swapchain.h  Texture.cpp  Texture.h
src/fuujin/scene/: Camera.cpp  Camera.h  Components.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
tools/: CMakeLists.txt  compile_shaders.cpp  embed.cpp
